gcc/testsuite/rust/rustc/ui/underscore-imports/issue-110164_dg.rs
use self::*;
// { dg-error ".E0432." "" { target *-*-* } .-1 }
use crate::*;
// { dg-error ".E0432." "" { target *-*-* } .-1 }
use _::a;
// { dg-error ".E0432." "" { target *-*-* } .-1 }
// { dg-error ".E0432." "" { target *-*-* } .-2 }
use _::*;
// { dg-error ".E0432." "" { target *-*-* } .-1 }
// { dg-error ".E0432." "" { target *-*-* } .-2 }

fn main() {
    use _::a;
// { dg-error ".E0432." "" { target *-*-* } .-1 }
// { dg-error ".E0432." "" { target *-*-* } .-2 }
    use _::*;
// { dg-error ".E0432." "" { target *-*-* } .-1 }
// { dg-error ".E0432." "" { target *-*-* } .-2 }
}

